k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 833973656475.dkr.ecr.eu-north-1.amazonaws.com/spring-app:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: storage
              mountPath: /storage
      volumes:
        - name: storage
          emptyDir: {}
